--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+:root {
+    --high-priority-bg: rgb(245, 200, 225);
+    --high-priority-hover-bg: rgb(235, 185, 210);
+    --medium-priority-bg: rgb(255, 225, 200);
+    --medium-priority-hover-bg: rgb(245, 215, 185);
+    --low-priority-bg: rgb(200, 235, 255);
+    --low-priority-hover-bg: rgb(190, 220, 240);
+    --no-priority-bg: rgb(245, 245, 245);
+    --no-priority-hover-bg: rgb(235, 235, 235);
+}
+
 * {
     margin: 0;
     padding: 0;
