--- a/src/components/task-card/TaskCard.module.css
+++ b/src/components/task-card/TaskCard.module.css
@@ -5,10 +5,28 @@
     gap: 15px;
     border-radius: 10px;
     transition: box-shadow 250ms ease, background-color 250ms ease;
+    position: relative;
+}
+
+.task::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border-radius: 10px;
+    transition: background-color 250ms ease;
+}
+
+.task:hover::before {
+    background-color: rgba(0, 0, 0, .05);
 }
 
 .list-view {
     gap: 5px;
+    padding: 5px 15px;
 }
 
 .task:hover {
@@ -19,33 +37,33 @@
     background-color: var(--high-priority-bg);
 }
 
-.high:hover {
+/* .high:hover {
     background-color: var(--high-priority-hover-bg);
-}
+} */
 
 .medium {
     background-color: var(--medium-priority-bg);
 }
 
-.medium:hover {
+/* .medium:hover {
     background-color: var(--medium-priority-hover-bg);
-}
+} */
 
 .low {
     background-color: var(--low-priority-bg);
 }
 
-.low:hover {
+/* .low:hover {
     background-color: var(--low-priority-hover-bg);
-}
+} */
 
 .none {
     background-color: var(--no-priority-bg);
 }
 
-.none:hover {
+/* .none:hover {
     background-color: var(--no-priority-hover-bg);
-}
+} */
 
 .header {
     display: flex;
@@ -80,6 +98,22 @@
 
 .snow {
     color: rgb(45, 185, 245);
+}
+
+.content {
+    font-size: 14px;
+}
+
+.tags {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.tag {
+    padding: 0 15px;
+    border-radius: 25px;
+    background-color: rgb(165, 245, 200);
 }
 
 .footer {
